--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,9 @@
       </div>
     </div>
 
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
     <%= render 'shared/logout_modal' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
